// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectList renders a no results item if filter removed all children 1`] = `
<li
  className="sc-bwzfXH csrfDw"
>
  No results for "x"
</li>
`;

exports[`SelectList renders a no results item if no childen are provided 1`] = `
<li
  className="sc-bwzfXH csrfDw"
>
  No results
</li>
`;
